--- a/src/Modules/Scoreboard.Modules.Main/Views/MainView.xaml
+++ b/src/Modules/Scoreboard.Modules.Main/Views/MainView.xaml
@@ -192,65 +192,143 @@
                             <Label Grid.Column="1" Content="Включено" HorizontalAlignment="Center"/>
                             <Label Grid.Column="2" Content="Создать" HorizontalAlignment="Center"/>
 
-                            <Label Grid.Row="1" Grid.Column="0" Content="Команда Хозяев" VerticalAlignment="Center">
+                            <Label Grid.Row="1" Grid.Column="0" Content="Команда Хозяев" VerticalAlignment="Center" Cursor="Hand">
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="MouseDown">
-                                        <i:InvokeCommandAction Command="{Binding ResizeCommand}"/>
+                                        <i:InvokeCommandAction Command="{Binding ResizeCommand}" CommandParameter="0"/>
                                     </i:EventTrigger>
                                 </i:Interaction.Triggers>
                             </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[0]}" CommandParameter="0" Margin="10, 10, 10, 10" Grid.Row="1" Grid.Column="1"/>
                             <ToggleButton IsChecked="{Binding Model.IsChoosing[0]}" Command="{Binding ChooseRegionCommand}" CommandParameter="0" Margin="10, 10, 10, 10" Grid.Row="1" Grid.Column="2"/>
 
-                            <Label Grid.Row="2" Grid.Column="0" Content="Команда Гостей" VerticalAlignment="Center"/>
+                            <Label Grid.Row="2" Grid.Column="0" Content="Команда Гостей" VerticalAlignment="Center" Cursor="Hand">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseDown">
+                                        <i:InvokeCommandAction Command="{Binding ResizeCommand}" CommandParameter="2"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[1]}" CommandParameter="2" Margin="10, 10, 10, 10" Grid.Row="2" Grid.Column="1"/>
                             <ToggleButton IsChecked="{Binding Model.IsChoosing[1]}" Command="{Binding ChooseRegionCommand}" CommandParameter="2" Margin="10, 10, 10, 10" Grid.Row="2" Grid.Column="2"/>
 
-                            <Label Grid.Row="3" Grid.Column="0" Content="Период" VerticalAlignment="Center"/>
+                            <Label Grid.Row="3" Grid.Column="0" Content="Период" VerticalAlignment="Center" Cursor="Hand">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseDown">
+                                        <i:InvokeCommandAction Command="{Binding ResizeCommand}" CommandParameter="4"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[2]}" CommandParameter="4" Margin="10, 10, 10, 10" Grid.Row="3" Grid.Column="1"/>
                             <ToggleButton IsChecked="{Binding Model.IsChoosing[2]}" Command="{Binding ChooseRegionCommand}" CommandParameter="4" Margin="10, 10, 10, 10" Grid.Row="3" Grid.Column="2"/>
 
-                            <Label Grid.Row="4" Grid.Column="0" Content="Время" VerticalAlignment="Center"/>
+                            <Label Grid.Row="4" Grid.Column="0" Content="Время" VerticalAlignment="Center" Cursor="Hand">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseDown">
+                                        <i:InvokeCommandAction Command="{Binding ResizeCommand}" CommandParameter="6"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[3]}" CommandParameter="6" Margin="10, 10, 10, 10" Grid.Row="4" Grid.Column="1"/>
                             <ToggleButton IsChecked="{Binding Model.IsChoosing[3]}" Command="{Binding ChooseRegionCommand}" CommandParameter="6" Margin="10, 10, 10, 10" Grid.Row="4" Grid.Column="2"/>
 
-                            <Label Grid.Row="5" Grid.Column="0" Content="Счет Хозяева" VerticalAlignment="Center"/>
+                            <Label Grid.Row="5" Grid.Column="0" Content="Счет Хозяева" VerticalAlignment="Center" Cursor="Hand">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseDown">
+                                        <i:InvokeCommandAction Command="{Binding ResizeCommand}" CommandParameter="8"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[4]}" CommandParameter="8" Margin="10, 10, 10, 10" Grid.Row="5" Grid.Column="1"/>
                             <ToggleButton IsChecked="{Binding Model.IsChoosing[4]}" Command="{Binding ChooseRegionCommand}" CommandParameter="8" Margin="10, 10, 10, 10" Grid.Row="5" Grid.Column="2"/>
 
-                            <Label Grid.Row="6" Grid.Column="0" Content="Счет Гости" VerticalAlignment="Center"/>
+                            <Label Grid.Row="6" Grid.Column="0" Content="Счет Гости" VerticalAlignment="Center" Cursor="Hand">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseDown">
+                                        <i:InvokeCommandAction Command="{Binding ResizeCommand}" CommandParameter="10"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[5]}" CommandParameter="10" Margin="10, 10, 10, 10" Grid.Row="6" Grid.Column="1"/>
                             <ToggleButton IsChecked="{Binding Model.IsChoosing[5]}" Command="{Binding ChooseRegionCommand}" CommandParameter="10" Margin="10, 10, 10, 10" Grid.Row="6" Grid.Column="2"/>
 
-                            <Label Grid.Row="7" Grid.Column="0" Content="Удаление Хозяев 1 Номер игрока" VerticalAlignment="Center"/>
+                            <Label Grid.Row="7" Grid.Column="0" Content="Удаление Хозяев 1 Номер игрока" VerticalAlignment="Center" Cursor="Hand">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseDown">
+                                        <i:InvokeCommandAction Command="{Binding ResizeCommand}" CommandParameter="12"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[6]}" CommandParameter="12" Margin="10, 10, 10, 10" Grid.Row="7" Grid.Column="1"/>
                             <ToggleButton IsChecked="{Binding Model.IsChoosing[6]}" Command="{Binding ChooseRegionCommand}" CommandParameter="12" Margin="10, 10, 10, 10" Grid.Row="7" Grid.Column="2"/>
 
-                            <Label Grid.Row="8" Grid.Column="0" Content="Удаление Хозяев 1 Время" VerticalAlignment="Center"/>
+                            <Label Grid.Row="8" Grid.Column="0" Content="Удаление Хозяев 1 Время" VerticalAlignment="Center" Cursor="Hand">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseDown">
+                                        <i:InvokeCommandAction Command="{Binding ResizeCommand}" CommandParameter="14"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[7]}" CommandParameter="14" Margin="10, 10, 10, 10" Grid.Row="8" Grid.Column="1"/>
                             <ToggleButton IsChecked="{Binding Model.IsChoosing[7]}" Command="{Binding ChooseRegionCommand}" CommandParameter="14" Margin="10, 10, 10, 10" Grid.Row="8" Grid.Column="2"/>
 
-                            <Label Grid.Row="9" Grid.Column="0" Content="Удаление Хозяев 2 Номер игрока" VerticalAlignment="Center"/>
+                            <Label Grid.Row="9" Grid.Column="0" Content="Удаление Хозяев 2 Номер игрока" VerticalAlignment="Center" Cursor="Hand">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseDown">
+                                        <i:InvokeCommandAction Command="{Binding ResizeCommand}" CommandParameter="16"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[8]}" CommandParameter="16" Margin="10, 10, 10, 10" Grid.Row="9" Grid.Column="1"/>
                             <ToggleButton IsChecked="{Binding Model.IsChoosing[8]}" Command="{Binding ChooseRegionCommand}" CommandParameter="16" Margin="10, 10, 10, 10" Grid.Row="9" Grid.Column="2"/>
 
-                            <Label Grid.Row="10" Grid.Column="0" Content="Удаление Хозяев 2 Время" VerticalAlignment="Center"/>
+                            <Label Grid.Row="10" Grid.Column="0" Content="Удаление Хозяев 2 Время" VerticalAlignment="Center" Cursor="Hand">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseDown">
+                                        <i:InvokeCommandAction Command="{Binding ResizeCommand}" CommandParameter="18"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[9]}" CommandParameter="18" Margin="10, 10, 10, 10" Grid.Row="10" Grid.Column="1"/>
                             <ToggleButton IsChecked="{Binding Model.IsChoosing[9]}" Command="{Binding ChooseRegionCommand}" CommandParameter="18" Margin="10, 10, 10, 10" Grid.Row="10" Grid.Column="2"/>
 
-                            <Label Grid.Row="11" Grid.Column="0" Content="Удаление Гости 1 Номер игрока" VerticalAlignment="Center"/>
+                            <Label Grid.Row="11" Grid.Column="0" Content="Удаление Гости 1 Номер игрока" VerticalAlignment="Center" Cursor="Hand">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseDown">
+                                        <i:InvokeCommandAction Command="{Binding ResizeCommand}" CommandParameter="20"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[10]}" CommandParameter="20" Margin="10, 10, 10, 10" Grid.Row="11" Grid.Column="1"/>
                             <ToggleButton IsChecked="{Binding Model.IsChoosing[10]}" Command="{Binding ChooseRegionCommand}" CommandParameter="20" Margin="10, 10, 10, 10" Grid.Row="11" Grid.Column="2"/>
 
-                            <Label Grid.Row="12" Grid.Column="0" Content="Удаление Гости 1 Время" VerticalAlignment="Center"/>
+                            <Label Grid.Row="12" Grid.Column="0" Content="Удаление Гости 1 Время" VerticalAlignment="Center" Cursor="Hand">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseDown">
+                                        <i:InvokeCommandAction Command="{Binding ResizeCommand}" CommandParameter="22"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[11]}" CommandParameter="22" Margin="10, 10, 10, 10" Grid.Row="12" Grid.Column="1"/>
                             <ToggleButton IsChecked="{Binding Model.IsChoosing[11]}" Command="{Binding ChooseRegionCommand}" CommandParameter="22" Margin="10, 10, 10, 10" Grid.Row="12" Grid.Column="2"/>
 
-                            <Label Grid.Row="13" Grid.Column="0" Content="Удаление Гости 2 Номер игрока" VerticalAlignment="Center"/>
+                            <Label Grid.Row="13" Grid.Column="0" Content="Удаление Гости 2 Номер игрока" VerticalAlignment="Center" Cursor="Hand">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseDown">
+                                        <i:InvokeCommandAction Command="{Binding ResizeCommand}" CommandParameter="24"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[12]}" CommandParameter="24" Margin="10, 10, 10, 10" Grid.Row="13" Grid.Column="1"/>
                             <ToggleButton IsChecked="{Binding Model.IsChoosing[12]}" Command="{Binding ChooseRegionCommand}" CommandParameter="24" Margin="10, 10, 10, 10" Grid.Row="13" Grid.Column="2"/>
 
-                            <Label Grid.Row="14" Grid.Column="0" Content="Удаление Гости 2 Время" VerticalAlignment="Center"/>
+                            <Label Grid.Row="14" Grid.Column="0" Content="Удаление Гости 2 Время" VerticalAlignment="Center" Cursor="Hand">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseDown">
+                                        <i:InvokeCommandAction Command="{Binding ResizeCommand}" CommandParameter="26"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[13]}" CommandParameter="26" Margin="10, 10, 10, 10" Grid.Row="14" Grid.Column="1"/>
                             <ToggleButton IsChecked="{Binding Model.IsChoosing[13]}" Command="{Binding ChooseRegionCommand}" CommandParameter="26" Margin="10, 10, 10, 10" Grid.Row="14" Grid.Column="2"/>
                         </Grid>
