--- a/src/Modules/Scoreboard.Modules.Main/Views/MainView.xaml
+++ b/src/Modules/Scoreboard.Modules.Main/Views/MainView.xaml
@@ -211,7 +211,7 @@
                             </Grid.ColumnDefinitions>
                             <Label Content="Наименование" HorizontalAlignment="Center"/>
                             <Label Grid.Column="1" Content="Включено" HorizontalAlignment="Center"/>
-                            <Label Grid.Column="2" Content="Создать" HorizontalAlignment="Center"/>
+                            <Label Grid.Column="2" Content="Создать/Редактировать" HorizontalAlignment="Center" Cursor=""/>
                             <Label Grid.Column="3" Content="Удалить" HorizontalAlignment="Center"/>
 
                             <Label Grid.Row="1" Grid.Column="0" Content="Команда Хозяев" VerticalAlignment="Center" Cursor="Hand" Foreground="{Binding Model.TextColor[0]}">
@@ -222,8 +222,7 @@
                                 </i:Interaction.Triggers>
                             </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[0]}" CommandParameter="0" Margin="10, 10, 10, 10" Grid.Row="1" Grid.Column="1" Cursor="Hand"/>
-                            <!--<ToggleButton IsChecked="{Binding Model.IsChoosing[0]}" Command="{Binding ChooseRegionCommand}" CommandParameter="0" Margin="10, 10, 10, 10" Grid.Row="1" Grid.Column="2" Cursor="Hand"/>-->
-                            <Button Content="Создать" Command="{Binding ChooseRegionCommand}" CommandParameter="0" Margin="10, 10, 10, 10" Grid.Row="1" Grid.Column="2" Cursor="Hand"/>
+                            <Button Content="{Binding Model.ButtonAction[0]}" Command="{Binding ChooseRegionCommand}" CommandParameter="0" Margin="10, 10, 10, 10" Grid.Row="1" Grid.Column="2" Cursor="Hand"/>
                             <Button Grid.Row="1"
                                     Grid.Column="3"
                                     Margin="0"
@@ -244,7 +243,7 @@
                                 </i:Interaction.Triggers>
                             </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[1]}" CommandParameter="2" Margin="10, 10, 10, 10" Grid.Row="2" Grid.Column="1" Cursor="Hand"/>
-                            <ToggleButton IsChecked="{Binding Model.IsChoosing[1]}" Command="{Binding ChooseRegionCommand}" CommandParameter="2" Margin="10, 10, 10, 10" Grid.Row="2" Grid.Column="2" Cursor="Hand"/>
+                            <Button Content="{Binding Model.ButtonAction[1]}" Command="{Binding ChooseRegionCommand}" CommandParameter="2" Margin="10, 10, 10, 10" Grid.Row="2" Grid.Column="2" Cursor="Hand"/>
                             <Button Grid.Row="2"
                                     Grid.Column="3"
                                     Margin="0"
@@ -265,7 +264,7 @@
                                 </i:Interaction.Triggers>
                             </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[2]}" CommandParameter="4" Margin="10, 10, 10, 10" Grid.Row="3" Grid.Column="1" Cursor="Hand"/>
-                            <ToggleButton IsChecked="{Binding Model.IsChoosing[2]}" Command="{Binding ChooseRegionCommand}" CommandParameter="4" Margin="10, 10, 10, 10" Grid.Row="3" Grid.Column="2" Cursor="Hand"/>
+                            <Button Content="{Binding Model.ButtonAction[2]}" Command="{Binding ChooseRegionCommand}" CommandParameter="4" Margin="10, 10, 10, 10" Grid.Row="3" Grid.Column="2" Cursor="Hand"/>
                             <Button Grid.Row="3"
                                     Grid.Column="3"
                                     Margin="0"
@@ -286,7 +285,7 @@
                                 </i:Interaction.Triggers>
                             </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[3]}" CommandParameter="6" Margin="10, 10, 10, 10" Grid.Row="4" Grid.Column="1" Cursor="Hand"/>
-                            <ToggleButton IsChecked="{Binding Model.IsChoosing[3]}" Command="{Binding ChooseRegionCommand}" CommandParameter="6" Margin="10, 10, 10, 10" Grid.Row="4" Grid.Column="2" Cursor="Hand"/>
+                            <Button Content="{Binding Model.ButtonAction[3]}" Command="{Binding ChooseRegionCommand}" CommandParameter="6" Margin="10, 10, 10, 10" Grid.Row="4" Grid.Column="2" Cursor="Hand"/>
                             <Button Grid.Row="4"
                                     Grid.Column="3"
                                     Margin="0"
@@ -307,7 +306,7 @@
                                 </i:Interaction.Triggers>
                             </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[4]}" CommandParameter="8" Margin="10, 10, 10, 10" Grid.Row="5" Grid.Column="1" Cursor="Hand"/>
-                            <ToggleButton IsChecked="{Binding Model.IsChoosing[4]}" Command="{Binding ChooseRegionCommand}" CommandParameter="8" Margin="10, 10, 10, 10" Grid.Row="5" Grid.Column="2" Cursor="Hand"/>
+                            <Button Content="{Binding Model.ButtonAction[4]}" Command="{Binding ChooseRegionCommand}" CommandParameter="8" Margin="10, 10, 10, 10" Grid.Row="5" Grid.Column="2" Cursor="Hand"/>
                             <Button Grid.Row="5"
                                     Grid.Column="3"
                                     Margin="0"
@@ -328,7 +327,7 @@
                                 </i:Interaction.Triggers>
                             </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[5]}" CommandParameter="10" Margin="10, 10, 10, 10" Grid.Row="6" Grid.Column="1" Cursor="Hand"/>
-                            <ToggleButton IsChecked="{Binding Model.IsChoosing[5]}" Command="{Binding ChooseRegionCommand}" CommandParameter="10" Margin="10, 10, 10, 10" Grid.Row="6" Grid.Column="2" Cursor="Hand"/>
+                            <Button Content="{Binding Model.ButtonAction[5]}" Command="{Binding ChooseRegionCommand}" CommandParameter="10" Margin="10, 10, 10, 10" Grid.Row="6" Grid.Column="2" Cursor="Hand"/>
                             <Button Grid.Row="6"
                                     Grid.Column="3"
                                     Margin="0"
@@ -349,7 +348,7 @@
                                 </i:Interaction.Triggers>
                             </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[6]}" CommandParameter="12" Margin="10, 10, 10, 10" Grid.Row="7" Grid.Column="1" Cursor="Hand"/>
-                            <ToggleButton IsChecked="{Binding Model.IsChoosing[6]}" Command="{Binding ChooseRegionCommand}" CommandParameter="12" Margin="10, 10, 10, 10" Grid.Row="7" Grid.Column="2" Cursor="Hand"/>
+                            <Button Content="{Binding Model.ButtonAction[6]}" Command="{Binding ChooseRegionCommand}" CommandParameter="12" Margin="10, 10, 10, 10" Grid.Row="7" Grid.Column="2" Cursor="Hand"/>
                             <Button Grid.Row="7"
                                     Grid.Column="3"
                                     Margin="0"
@@ -370,7 +369,7 @@
                                 </i:Interaction.Triggers>
                             </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[7]}" CommandParameter="14" Margin="10, 10, 10, 10" Grid.Row="8" Grid.Column="1" Cursor="Hand"/>
-                            <ToggleButton IsChecked="{Binding Model.IsChoosing[7]}" Command="{Binding ChooseRegionCommand}" CommandParameter="14" Margin="10, 10, 10, 10" Grid.Row="8" Grid.Column="2" Cursor="Hand"/>
+                            <Button Content="{Binding Model.ButtonAction[7]}" Command="{Binding ChooseRegionCommand}" CommandParameter="14" Margin="10, 10, 10, 10" Grid.Row="8" Grid.Column="2" Cursor="Hand"/>
                             <Button Grid.Row="8"
                                     Grid.Column="3"
                                     Margin="0"
@@ -391,7 +390,7 @@
                                 </i:Interaction.Triggers>
                             </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[8]}" CommandParameter="16" Margin="10, 10, 10, 10" Grid.Row="9" Grid.Column="1" Cursor="Hand"/>
-                            <ToggleButton IsChecked="{Binding Model.IsChoosing[8]}" Command="{Binding ChooseRegionCommand}" CommandParameter="16" Margin="10, 10, 10, 10" Grid.Row="9" Grid.Column="2" Cursor="Hand"/>
+                            <Button Content="{Binding Model.ButtonAction[8]}" Command="{Binding ChooseRegionCommand}" CommandParameter="16" Margin="10, 10, 10, 10" Grid.Row="9" Grid.Column="2" Cursor="Hand"/>
                             <Button Grid.Row="9"
                                     Grid.Column="3"
                                     Margin="0"
@@ -412,7 +411,7 @@
                                 </i:Interaction.Triggers>
                             </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[9]}" CommandParameter="18" Margin="10, 10, 10, 10" Grid.Row="10" Grid.Column="1" Cursor="Hand"/>
-                            <ToggleButton IsChecked="{Binding Model.IsChoosing[9]}" Command="{Binding ChooseRegionCommand}" CommandParameter="18" Margin="10, 10, 10, 10" Grid.Row="10" Grid.Column="2" Cursor="Hand"/>
+                            <Button Content="{Binding Model.ButtonAction[9]}" Command="{Binding ChooseRegionCommand}" CommandParameter="18" Margin="10, 10, 10, 10" Grid.Row="10" Grid.Column="2" Cursor="Hand"/>
                             <Button Grid.Row="10"
                                     Grid.Column="3"
                                     Margin="0"
@@ -433,7 +432,7 @@
                                 </i:Interaction.Triggers>
                             </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[10]}" CommandParameter="20" Margin="10, 10, 10, 10" Grid.Row="11" Grid.Column="1" Cursor="Hand"/>
-                            <ToggleButton IsChecked="{Binding Model.IsChoosing[10]}" Command="{Binding ChooseRegionCommand}" CommandParameter="20" Margin="10, 10, 10, 10" Grid.Row="11" Grid.Column="2" Cursor="Hand"/>
+                            <Button Content="{Binding Model.ButtonAction[10]}" Command="{Binding ChooseRegionCommand}" CommandParameter="20" Margin="10, 10, 10, 10" Grid.Row="11" Grid.Column="2" Cursor="Hand"/>
                             <Button Grid.Row="11"
                                     Grid.Column="3"
                                     Margin="0"
@@ -454,7 +453,7 @@
                                 </i:Interaction.Triggers>
                             </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[11]}" CommandParameter="22" Margin="10, 10, 10, 10" Grid.Row="12" Grid.Column="1" Cursor="Hand"/>
-                            <ToggleButton IsChecked="{Binding Model.IsChoosing[11]}" Command="{Binding ChooseRegionCommand}" CommandParameter="22" Margin="10, 10, 10, 10" Grid.Row="12" Grid.Column="2" Cursor="Hand"/>
+                            <Button Content="{Binding Model.ButtonAction[11]}" Command="{Binding ChooseRegionCommand}" CommandParameter="22" Margin="10, 10, 10, 10" Grid.Row="12" Grid.Column="2" Cursor="Hand"/>
                             <Button Grid.Row="12"
                                     Grid.Column="3"
                                     Margin="0"
@@ -475,7 +474,7 @@
                                 </i:Interaction.Triggers>
                             </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[12]}" CommandParameter="24" Margin="10, 10, 10, 10" Grid.Row="13" Grid.Column="1" Cursor="Hand"/>
-                            <ToggleButton IsChecked="{Binding Model.IsChoosing[12]}" Command="{Binding ChooseRegionCommand}" CommandParameter="24" Margin="10, 10, 10, 10" Grid.Row="13" Grid.Column="2" Cursor="Hand"/>
+                            <Button Content="{Binding Model.ButtonAction[12]}" Command="{Binding ChooseRegionCommand}" CommandParameter="24" Margin="10, 10, 10, 10" Grid.Row="13" Grid.Column="2" Cursor="Hand"/>
                             <Button Grid.Row="13"
                                     Grid.Column="3"
                                     Margin="0"
@@ -496,7 +495,7 @@
                                 </i:Interaction.Triggers>
                             </Label>
                             <ToggleButton IsChecked="{Binding Model.IsChecked[13]}" CommandParameter="26" Margin="10, 10, 10, 10" Grid.Row="14" Grid.Column="1" Cursor="Hand"/>
-                            <ToggleButton IsChecked="{Binding Model.IsChoosing[13]}" Command="{Binding ChooseRegionCommand}" CommandParameter="26" Margin="10, 10, 10, 10" Grid.Row="14" Grid.Column="2" Cursor="Hand"/>
+                            <Button Content="{Binding Model.ButtonAction[13]}" Command="{Binding ChooseRegionCommand}" CommandParameter="26" Margin="10, 10, 10, 10" Grid.Row="14" Grid.Column="2" Cursor="Hand"/>
                             <Button Grid.Row="14"
                                     Grid.Column="3"
                                     Margin="0"
