--- a/src/Modules/Scoreboard.Modules.Main/Views/MainView.xaml
+++ b/src/Modules/Scoreboard.Modules.Main/Views/MainView.xaml
@@ -25,6 +25,10 @@
                 <Menu>
                     <MenuItem Command="{Binding ChooseFileCommand}" Header="Файл"/>
                     <MenuItem Command="{Binding CameraCommand}" Header="Камера"/>
+                    <MenuItem Header="Режим приложения">
+                        <MenuItem Command="{Binding ChangeModeCommand}" CommandParameter="0" Header="Режим: основной"/>
+                        <MenuItem Command="{Binding ChangeModeCommand}" CommandParameter="1" Header="Режим: настройка"/>
+                    </MenuItem>
                 </Menu>
             </ToolBar>
         </ToolBarTray>
@@ -45,7 +49,7 @@
 
                             <Label Content="Способ сохранения" Foreground="Gray"/>
 
-                            <ComboBox Padding="3" Grid.Row="1" ItemsSource="{Binding Model.SaveSettings}" SelectedItem="{Binding Model.SaveSetting}"/>
+                            <ComboBox Padding="3" Grid.Row="1" ItemsSource="{Binding Model.SaveSettings}" SelectedIndex="{Binding Model.SaveSetting}"/>
 
                             <Grid Grid.Row="2">
                                 <Grid.ColumnDefinitions>
@@ -98,7 +102,7 @@
                         </Grid>
                     </GroupBox>
                 </md:DrawerHost.LeftDrawerContent>
-                
+
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="auto"/>
@@ -113,6 +117,7 @@
                                   AutomationProperties.Name="HamburgerToggleButton"
                                   IsChecked="{Binding IsLeftMenuOpen}"
                                   Style="{StaticResource MaterialDesignHamburgerToggleButton}"
+                                  Visibility="{Binding IsVisible}"
                                   ToolTip="Открыть Лог выполнения"
                                   Cursor="Hand"/>
 
@@ -123,6 +128,7 @@
                                   VerticalAlignment="Top"
                                   AutomationProperties.Name="HamburgerToggleButton"
                                   IsChecked="{Binding IsRightMenuOpen}"
+                                  Visibility="{Binding IsVisible}"
                                   RenderTransformOrigin="0.5,0.5"
                                   Style="{StaticResource MaterialDesignHamburgerToggleButton}"
                                   ToolTip="Открыть Зоны распознавания"
@@ -133,6 +139,7 @@
                     </ToggleButton>
                     <Grid Margin="75, 10, 10, 10">
                         <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto"/>
                             <ColumnDefinition Width="auto"/>
                             <ColumnDefinition Width="auto"/>
                             <ColumnDefinition Width="auto"/>
@@ -156,7 +163,7 @@
                                 <RowDefinition/>
                             </Grid.RowDefinitions>
 
-                            <Label Grid.Column="1" Content="Частота, сек" Foreground="Gray"/>
+                            <Label Grid.Column="1" Content="Кадров в секунду" Foreground="Gray"/>
                             <Grid Grid.Column="1" Grid.Row="1" Cursor="">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition/>
@@ -170,15 +177,10 @@
                             </Grid>
                         </Grid>
 
-                        <Grid Grid.Column="2" Margin="10">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition/>
-                                <ColumnDefinition/>
-                            </Grid.ColumnDefinitions>
+                        <Button Grid.Column="2" Margin="10" Content="{Binding Model.DetectionButtonText}" Background="{Binding Model.DetectionButtonColor}" BorderBrush="{Binding Model.DetectionButtonColor}" Command="{Binding DetectionCommand}" Cursor="Hand"/>
 
-                            <Label VerticalAlignment="Center" Content="Распознавание " Foreground="Gray"/>
-                            <ToggleButton Grid.Column="1" IsChecked="{Binding Model.IsDetectionEnabled}" Cursor="Hand"/>
-                        </Grid>
+                        <Button Grid.Column="3" Margin="10" Content="Выбор арены" Command="{Binding LoadSettingsCommand}" Cursor="Hand"/>
+
                     </Grid>
 
                     <Image Grid.Row="1" Margin="65,0,65,0" Source="{Binding Model.Frame}">
@@ -195,7 +197,7 @@
                         </i:Interaction.Triggers>
                     </Image>
                 </Grid>
-                
+
                 <md:DrawerHost.RightDrawerContent>
                     <Grid>
                         <Grid.RowDefinitions>
@@ -558,7 +560,7 @@
                         </GroupBox>
                     </Grid>
                 </md:DrawerHost.RightDrawerContent>
-                
+
             </md:DrawerHost>
         </DockPanel>
     </Grid>
